--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "copy": "cp dist-files/.* dist",
+    "deploy": "gh-pages -d dist -t"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
